# coverwallet-challenge

./: .venv  PIPELINE_GUIDE.md  QUICK_COMMANDS.md  README.md  docker-compose.yml  findings.md  fix-permissions.sh  pyproject.toml  readme.pdf:Zone.Identifier  revert_permission.sh  test_payload.json  test_pipeline.sh
airflow/: Dockerfile  requirements.txt
airflow/dags/: coverwallet_ml_pipeline.py  test_dag.py
api/app/: Dockerfile  main.py  requirements.txt
data/: accounts_test.csv  accounts_test_processed.csv  accounts_train.csv  accounts_train_processed.csv  example_account_value.csv  features.csv  features_test.csv  features_train.csv  predictions.csv  predictions_develop.csv  predictions_old.csv  quotes_test.csv  quotes_train.csv  sample_submission.csv
model/: xgboost_model.joblib
notebooks/: 1_eda.ipynb  2_preprocessing.ipynb  2_wrangling copy.ipynb  2_wrangling.ipynb  3_train copy.ipynb  3_train.ipynb  3_wrangling.ipynb  4_analysis_results.ipynb  5_analysis_results.ipynb  eda_completo.ipynb
src/: detect.py  fill_null.py  preprocessing_data.py  utils.py  wrangling.py
src/config/: config_preprocess.yaml  config_wrangling.yaml  encoding_stats.json  encodings.yaml
