[tool.poetry]
name = "challenge-coverwallet"
version = "0.1.0"
description = ""
authors = ["yuttokb2 <yuttokb2@gmail.com>"]
readme = "README.md"
package-mode = false  # Add this line

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.3.3"
pandas = "^2.3.2"
scikit-learn = "^1.7.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.6"
ipykernel = "^6.30.1"
squarify = "^0.4.4"
scipy = "^1.16.2"
joblib = "^1.5.2"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pickle-mixin = "^1.0.2"
xgboost = "^3.0.5"
apache-airflow = "^3.0.6"
pyyaml = "^6.0.2"
shap = "^0.48.0"
lightgbm = "^4.6.0"
nbconvert = "^7.16.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"